--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "15.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "redis": "^5.8.0",
     "zod": "^4.0.17"
   },
   "devDependencies": {
