--- a/package.json
+++ b/package.json
@@ -3,29 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "node server/server.js",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "ws": "node server/ws-server.js"
   },
   "dependencies": {
-    "@vercel/kv": "^3.0.0",
-    "chess.js": "^1.4.0",
+    "@tailwindcss/postcss": "^4.0.0",
+    "chess.js": "^1.0.0",
+    "dotenv": "^17.2.1",
     "next": "15.4.6",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "redis": "^5.8.0",
-    "zod": "^4.0.17"
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "redis": "^4.6.14",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/node": "^22",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
-    "tailwindcss": "^4",
-    "typescript": "^5"
+    "tailwindcss": "^4.0.0",
+    "typescript": "^5",
+    "ws": "^8.18.0"
   }
 }
