--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^17.2.1",
     "next": "15.4.6",
     "react": "18.3.1",
+    "react-chessboard": "^4.6.2",
     "react-dom": "18.3.1",
     "redis": "^4.6.14",
     "zod": "^3.23.8"
